parser.output
   0  $accept : %entry% $end

   1  simple_exp : LPAREN exp RPAREN
   2             | LPAREN RPAREN
   3             | BOOL
   4             | INT
   5             | FLOAT
   6             | IDENT
   7             | simple_exp DOT LPAREN exp RPAREN

   8  exp : simple_exp
   9      | NOT exp
  10      | MINUS exp
  11      | exp PLUS exp
  12      | exp MINUS exp
  13      | exp EQUAL exp
  14      | exp LESS_GREATER exp
  15      | exp LESS exp
  16      | exp GREATER exp
  17      | exp LESS_EQUAL exp
  18      | exp GREATER_EQUAL exp
  19      | IF exp THEN exp ELSE exp
  20      | MINUS_DOT exp
  21      | exp PLUS_DOT exp
  22      | exp MINUS_DOT exp
  23      | exp AST_DOT exp
  24      | exp SLASH_DOT exp
  25      | LET IDENT EQUAL exp IN exp
  26      | LET REC fundef IN exp
  27      | exp actual_args
  28      | elems
  29      | LET LPAREN pat RPAREN EQUAL exp IN exp
  30      | simple_exp DOT LPAREN exp RPAREN LESS_MINUS exp
  31      | exp SEMICOLON exp
  32      | ARRAY_CREATE simple_exp simple_exp
  33      | error

  34  fundef : IDENT formal_args EQUAL exp

  35  formal_args : IDENT formal_args
  36              | IDENT

  37  actual_args : actual_args simple_exp
  38              | simple_exp

  39  elems : elems COMMA exp
  40        | exp COMMA exp

  41  pat : pat COMMA IDENT
  42      | IDENT COMMA IDENT

  43  %entry% : '\001' exp

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . exp  (43)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 15
	simple_exp  goto 16
	elems  goto 17


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	exp : error .  (33)

	.  reduce 33


state 4
	simple_exp : BOOL .  (3)

	.  reduce 3


state 5
	simple_exp : INT .  (4)

	.  reduce 4


state 6
	simple_exp : FLOAT .  (5)

	.  reduce 5


state 7
	exp : NOT . exp  (9)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 18
	simple_exp  goto 16
	elems  goto 17


state 8
	exp : MINUS . exp  (10)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 19
	simple_exp  goto 16
	elems  goto 17


state 9
	exp : MINUS_DOT . exp  (20)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 20
	simple_exp  goto 16
	elems  goto 17


state 10
	exp : IF . exp THEN exp ELSE exp  (19)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 21
	simple_exp  goto 16
	elems  goto 17


state 11
	simple_exp : IDENT .  (6)

	.  reduce 6


state 12
	exp : LET . IDENT EQUAL exp IN exp  (25)
	exp : LET . REC fundef IN exp  (26)
	exp : LET . LPAREN pat RPAREN EQUAL exp IN exp  (29)

	IDENT  shift 22
	REC  shift 23
	LPAREN  shift 24
	.  error


state 13
	exp : ARRAY_CREATE . simple_exp simple_exp  (32)

	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	IDENT  shift 11
	LPAREN  shift 14
	.  error

	simple_exp  goto 25


state 14
	simple_exp : LPAREN . exp RPAREN  (1)
	simple_exp : LPAREN . RPAREN  (2)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	RPAREN  shift 26
	.  error

	exp  goto 27
	simple_exp  goto 16
	elems  goto 17


state 15
	exp : exp . PLUS exp  (11)
	exp : exp . MINUS exp  (12)
	exp : exp . EQUAL exp  (13)
	exp : exp . LESS_GREATER exp  (14)
	exp : exp . LESS exp  (15)
	exp : exp . GREATER exp  (16)
	exp : exp . LESS_EQUAL exp  (17)
	exp : exp . GREATER_EQUAL exp  (18)
	exp : exp . PLUS_DOT exp  (21)
	exp : exp . MINUS_DOT exp  (22)
	exp : exp . AST_DOT exp  (23)
	exp : exp . SLASH_DOT exp  (24)
	exp : exp . actual_args  (27)
	exp : exp . SEMICOLON exp  (31)
	elems : exp . COMMA exp  (40)
	%entry% : '\001' exp .  (43)

	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	MINUS  shift 28
	PLUS  shift 29
	MINUS_DOT  shift 30
	PLUS_DOT  shift 31
	AST_DOT  shift 32
	SLASH_DOT  shift 33
	EQUAL  shift 34
	LESS_GREATER  shift 35
	LESS_EQUAL  shift 36
	GREATER_EQUAL  shift 37
	LESS  shift 38
	GREATER  shift 39
	IDENT  shift 11
	COMMA  shift 40
	SEMICOLON  shift 41
	LPAREN  shift 14
	$end  reduce 43

	simple_exp  goto 42
	actual_args  goto 43


state 16
	simple_exp : simple_exp . DOT LPAREN exp RPAREN  (7)
	exp : simple_exp .  (8)
	exp : simple_exp . DOT LPAREN exp RPAREN LESS_MINUS exp  (30)

	DOT  shift 44
	$end  reduce 8
	BOOL  reduce 8
	INT  reduce 8
	FLOAT  reduce 8
	MINUS  reduce 8
	PLUS  reduce 8
	MINUS_DOT  reduce 8
	PLUS_DOT  reduce 8
	AST_DOT  reduce 8
	SLASH_DOT  reduce 8
	EQUAL  reduce 8
	LESS_GREATER  reduce 8
	LESS_EQUAL  reduce 8
	GREATER_EQUAL  reduce 8
	LESS  reduce 8
	GREATER  reduce 8
	THEN  reduce 8
	ELSE  reduce 8
	IDENT  reduce 8
	IN  reduce 8
	COMMA  reduce 8
	SEMICOLON  reduce 8
	LPAREN  reduce 8
	RPAREN  reduce 8


17: shift/reduce conflict (shift 45, reduce 28) on COMMA
state 17
	exp : elems .  (28)
	elems : elems . COMMA exp  (39)

	COMMA  shift 45
	$end  reduce 28
	BOOL  reduce 28
	INT  reduce 28
	FLOAT  reduce 28
	MINUS  reduce 28
	PLUS  reduce 28
	MINUS_DOT  reduce 28
	PLUS_DOT  reduce 28
	AST_DOT  reduce 28
	SLASH_DOT  reduce 28
	EQUAL  reduce 28
	LESS_GREATER  reduce 28
	LESS_EQUAL  reduce 28
	GREATER_EQUAL  reduce 28
	LESS  reduce 28
	GREATER  reduce 28
	THEN  reduce 28
	ELSE  reduce 28
	IDENT  reduce 28
	IN  reduce 28
	SEMICOLON  reduce 28
	LPAREN  reduce 28
	RPAREN  reduce 28


18: shift/reduce conflict (shift 4, reduce 9) on BOOL
18: shift/reduce conflict (shift 5, reduce 9) on INT
18: shift/reduce conflict (shift 6, reduce 9) on FLOAT
18: shift/reduce conflict (shift 11, reduce 9) on IDENT
18: shift/reduce conflict (shift 14, reduce 9) on LPAREN
state 18
	exp : NOT exp .  (9)
	exp : exp . PLUS exp  (11)
	exp : exp . MINUS exp  (12)
	exp : exp . EQUAL exp  (13)
	exp : exp . LESS_GREATER exp  (14)
	exp : exp . LESS exp  (15)
	exp : exp . GREATER exp  (16)
	exp : exp . LESS_EQUAL exp  (17)
	exp : exp . GREATER_EQUAL exp  (18)
	exp : exp . PLUS_DOT exp  (21)
	exp : exp . MINUS_DOT exp  (22)
	exp : exp . AST_DOT exp  (23)
	exp : exp . SLASH_DOT exp  (24)
	exp : exp . actual_args  (27)
	exp : exp . SEMICOLON exp  (31)
	elems : exp . COMMA exp  (40)

	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	IDENT  shift 11
	LPAREN  shift 14
	$end  reduce 9
	MINUS  reduce 9
	PLUS  reduce 9
	MINUS_DOT  reduce 9
	PLUS_DOT  reduce 9
	AST_DOT  reduce 9
	SLASH_DOT  reduce 9
	EQUAL  reduce 9
	LESS_GREATER  reduce 9
	LESS_EQUAL  reduce 9
	GREATER_EQUAL  reduce 9
	LESS  reduce 9
	GREATER  reduce 9
	THEN  reduce 9
	ELSE  reduce 9
	IN  reduce 9
	COMMA  reduce 9
	SEMICOLON  reduce 9
	RPAREN  reduce 9

	simple_exp  goto 42
	actual_args  goto 43


19: shift/reduce conflict (shift 4, reduce 10) on BOOL
19: shift/reduce conflict (shift 5, reduce 10) on INT
19: shift/reduce conflict (shift 6, reduce 10) on FLOAT
19: shift/reduce conflict (shift 11, reduce 10) on IDENT
19: shift/reduce conflict (shift 14, reduce 10) on LPAREN
state 19
	exp : MINUS exp .  (10)
	exp : exp . PLUS exp  (11)
	exp : exp . MINUS exp  (12)
	exp : exp . EQUAL exp  (13)
	exp : exp . LESS_GREATER exp  (14)
	exp : exp . LESS exp  (15)
	exp : exp . GREATER exp  (16)
	exp : exp . LESS_EQUAL exp  (17)
	exp : exp . GREATER_EQUAL exp  (18)
	exp : exp . PLUS_DOT exp  (21)
	exp : exp . MINUS_DOT exp  (22)
	exp : exp . AST_DOT exp  (23)
	exp : exp . SLASH_DOT exp  (24)
	exp : exp . actual_args  (27)
	exp : exp . SEMICOLON exp  (31)
	elems : exp . COMMA exp  (40)

	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	IDENT  shift 11
	LPAREN  shift 14
	$end  reduce 10
	MINUS  reduce 10
	PLUS  reduce 10
	MINUS_DOT  reduce 10
	PLUS_DOT  reduce 10
	AST_DOT  reduce 10
	SLASH_DOT  reduce 10
	EQUAL  reduce 10
	LESS_GREATER  reduce 10
	LESS_EQUAL  reduce 10
	GREATER_EQUAL  reduce 10
	LESS  reduce 10
	GREATER  reduce 10
	THEN  reduce 10
	ELSE  reduce 10
	IN  reduce 10
	COMMA  reduce 10
	SEMICOLON  reduce 10
	RPAREN  reduce 10

	simple_exp  goto 42
	actual_args  goto 43


20: shift/reduce conflict (shift 4, reduce 20) on BOOL
20: shift/reduce conflict (shift 5, reduce 20) on INT
20: shift/reduce conflict (shift 6, reduce 20) on FLOAT
20: shift/reduce conflict (shift 11, reduce 20) on IDENT
20: shift/reduce conflict (shift 14, reduce 20) on LPAREN
state 20
	exp : exp . PLUS exp  (11)
	exp : exp . MINUS exp  (12)
	exp : exp . EQUAL exp  (13)
	exp : exp . LESS_GREATER exp  (14)
	exp : exp . LESS exp  (15)
	exp : exp . GREATER exp  (16)
	exp : exp . LESS_EQUAL exp  (17)
	exp : exp . GREATER_EQUAL exp  (18)
	exp : MINUS_DOT exp .  (20)
	exp : exp . PLUS_DOT exp  (21)
	exp : exp . MINUS_DOT exp  (22)
	exp : exp . AST_DOT exp  (23)
	exp : exp . SLASH_DOT exp  (24)
	exp : exp . actual_args  (27)
	exp : exp . SEMICOLON exp  (31)
	elems : exp . COMMA exp  (40)

	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	IDENT  shift 11
	LPAREN  shift 14
	$end  reduce 20
	MINUS  reduce 20
	PLUS  reduce 20
	MINUS_DOT  reduce 20
	PLUS_DOT  reduce 20
	AST_DOT  reduce 20
	SLASH_DOT  reduce 20
	EQUAL  reduce 20
	LESS_GREATER  reduce 20
	LESS_EQUAL  reduce 20
	GREATER_EQUAL  reduce 20
	LESS  reduce 20
	GREATER  reduce 20
	THEN  reduce 20
	ELSE  reduce 20
	IN  reduce 20
	COMMA  reduce 20
	SEMICOLON  reduce 20
	RPAREN  reduce 20

	simple_exp  goto 42
	actual_args  goto 43


state 21
	exp : exp . PLUS exp  (11)
	exp : exp . MINUS exp  (12)
	exp : exp . EQUAL exp  (13)
	exp : exp . LESS_GREATER exp  (14)
	exp : exp . LESS exp  (15)
	exp : exp . GREATER exp  (16)
	exp : exp . LESS_EQUAL exp  (17)
	exp : exp . GREATER_EQUAL exp  (18)
	exp : IF exp . THEN exp ELSE exp  (19)
	exp : exp . PLUS_DOT exp  (21)
	exp : exp . MINUS_DOT exp  (22)
	exp : exp . AST_DOT exp  (23)
	exp : exp . SLASH_DOT exp  (24)
	exp : exp . actual_args  (27)
	exp : exp . SEMICOLON exp  (31)
	elems : exp . COMMA exp  (40)

	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	MINUS  shift 28
	PLUS  shift 29
	MINUS_DOT  shift 30
	PLUS_DOT  shift 31
	AST_DOT  shift 32
	SLASH_DOT  shift 33
	EQUAL  shift 34
	LESS_GREATER  shift 35
	LESS_EQUAL  shift 36
	GREATER_EQUAL  shift 37
	LESS  shift 38
	GREATER  shift 39
	THEN  shift 46
	IDENT  shift 11
	COMMA  shift 40
	SEMICOLON  shift 41
	LPAREN  shift 14
	.  error

	simple_exp  goto 42
	actual_args  goto 43


state 22
	exp : LET IDENT . EQUAL exp IN exp  (25)

	EQUAL  shift 47
	.  error


state 23
	exp : LET REC . fundef IN exp  (26)

	IDENT  shift 48
	.  error

	fundef  goto 49


state 24
	exp : LET LPAREN . pat RPAREN EQUAL exp IN exp  (29)

	IDENT  shift 50
	.  error

	pat  goto 51


state 25
	simple_exp : simple_exp . DOT LPAREN exp RPAREN  (7)
	exp : ARRAY_CREATE simple_exp . simple_exp  (32)

	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	IDENT  shift 11
	DOT  shift 52
	LPAREN  shift 14
	.  error

	simple_exp  goto 53


state 26
	simple_exp : LPAREN RPAREN .  (2)

	.  reduce 2


state 27
	simple_exp : LPAREN exp . RPAREN  (1)
	exp : exp . PLUS exp  (11)
	exp : exp . MINUS exp  (12)
	exp : exp . EQUAL exp  (13)
	exp : exp . LESS_GREATER exp  (14)
	exp : exp . LESS exp  (15)
	exp : exp . GREATER exp  (16)
	exp : exp . LESS_EQUAL exp  (17)
	exp : exp . GREATER_EQUAL exp  (18)
	exp : exp . PLUS_DOT exp  (21)
	exp : exp . MINUS_DOT exp  (22)
	exp : exp . AST_DOT exp  (23)
	exp : exp . SLASH_DOT exp  (24)
	exp : exp . actual_args  (27)
	exp : exp . SEMICOLON exp  (31)
	elems : exp . COMMA exp  (40)

	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	MINUS  shift 28
	PLUS  shift 29
	MINUS_DOT  shift 30
	PLUS_DOT  shift 31
	AST_DOT  shift 32
	SLASH_DOT  shift 33
	EQUAL  shift 34
	LESS_GREATER  shift 35
	LESS_EQUAL  shift 36
	GREATER_EQUAL  shift 37
	LESS  shift 38
	GREATER  shift 39
	IDENT  shift 11
	COMMA  shift 40
	SEMICOLON  shift 41
	LPAREN  shift 14
	RPAREN  shift 54
	.  error

	simple_exp  goto 42
	actual_args  goto 43


state 28
	exp : exp MINUS . exp  (12)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 55
	simple_exp  goto 16
	elems  goto 17


state 29
	exp : exp PLUS . exp  (11)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 56
	simple_exp  goto 16
	elems  goto 17


state 30
	exp : exp MINUS_DOT . exp  (22)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 57
	simple_exp  goto 16
	elems  goto 17


state 31
	exp : exp PLUS_DOT . exp  (21)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 58
	simple_exp  goto 16
	elems  goto 17


state 32
	exp : exp AST_DOT . exp  (23)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 59
	simple_exp  goto 16
	elems  goto 17


state 33
	exp : exp SLASH_DOT . exp  (24)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 60
	simple_exp  goto 16
	elems  goto 17


state 34
	exp : exp EQUAL . exp  (13)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 61
	simple_exp  goto 16
	elems  goto 17


state 35
	exp : exp LESS_GREATER . exp  (14)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 62
	simple_exp  goto 16
	elems  goto 17


state 36
	exp : exp LESS_EQUAL . exp  (17)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 63
	simple_exp  goto 16
	elems  goto 17


state 37
	exp : exp GREATER_EQUAL . exp  (18)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 64
	simple_exp  goto 16
	elems  goto 17


state 38
	exp : exp LESS . exp  (15)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 65
	simple_exp  goto 16
	elems  goto 17


state 39
	exp : exp GREATER . exp  (16)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 66
	simple_exp  goto 16
	elems  goto 17


state 40
	elems : exp COMMA . exp  (40)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 67
	simple_exp  goto 16
	elems  goto 17


state 41
	exp : exp SEMICOLON . exp  (31)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 68
	simple_exp  goto 16
	elems  goto 17


state 42
	simple_exp : simple_exp . DOT LPAREN exp RPAREN  (7)
	actual_args : simple_exp .  (38)

	DOT  shift 52
	$end  reduce 38
	BOOL  reduce 38
	INT  reduce 38
	FLOAT  reduce 38
	MINUS  reduce 38
	PLUS  reduce 38
	MINUS_DOT  reduce 38
	PLUS_DOT  reduce 38
	AST_DOT  reduce 38
	SLASH_DOT  reduce 38
	EQUAL  reduce 38
	LESS_GREATER  reduce 38
	LESS_EQUAL  reduce 38
	GREATER_EQUAL  reduce 38
	LESS  reduce 38
	GREATER  reduce 38
	THEN  reduce 38
	ELSE  reduce 38
	IDENT  reduce 38
	IN  reduce 38
	COMMA  reduce 38
	SEMICOLON  reduce 38
	LPAREN  reduce 38
	RPAREN  reduce 38


43: shift/reduce conflict (shift 4, reduce 27) on BOOL
43: shift/reduce conflict (shift 5, reduce 27) on INT
43: shift/reduce conflict (shift 6, reduce 27) on FLOAT
43: shift/reduce conflict (shift 11, reduce 27) on IDENT
43: shift/reduce conflict (shift 14, reduce 27) on LPAREN
state 43
	exp : exp actual_args .  (27)
	actual_args : actual_args . simple_exp  (37)

	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	IDENT  shift 11
	LPAREN  shift 14
	$end  reduce 27
	MINUS  reduce 27
	PLUS  reduce 27
	MINUS_DOT  reduce 27
	PLUS_DOT  reduce 27
	AST_DOT  reduce 27
	SLASH_DOT  reduce 27
	EQUAL  reduce 27
	LESS_GREATER  reduce 27
	LESS_EQUAL  reduce 27
	GREATER_EQUAL  reduce 27
	LESS  reduce 27
	GREATER  reduce 27
	THEN  reduce 27
	ELSE  reduce 27
	IN  reduce 27
	COMMA  reduce 27
	SEMICOLON  reduce 27
	RPAREN  reduce 27

	simple_exp  goto 69


state 44
	simple_exp : simple_exp DOT . LPAREN exp RPAREN  (7)
	exp : simple_exp DOT . LPAREN exp RPAREN LESS_MINUS exp  (30)

	LPAREN  shift 70
	.  error


state 45
	elems : elems COMMA . exp  (39)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 71
	simple_exp  goto 16
	elems  goto 17


state 46
	exp : IF exp THEN . exp ELSE exp  (19)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 72
	simple_exp  goto 16
	elems  goto 17


state 47
	exp : LET IDENT EQUAL . exp IN exp  (25)

	error  shift 3
	BOOL  shift 4
	INT  shift 5
	FLOAT  shift 6
	NOT  shift 7
	MINUS  shift 8
	MINUS_DOT  shift 9
	IF  shift 10
	IDENT  shift 11
	LET  shift 12
	ARRAY_CREATE  shift 13
	LPAREN  shift 14
	.  error

	exp  goto 73
	simple_exp  goto 16
	elems  goto 17


state 48
	fundef : IDENT . formal_args EQUAL exp  (34)

	IDENT  shift 74
	.  error

	formal_args  goto 75


state 49
	exp : LET REC fundef . IN exp  (26)

	IN  shift 76
	.  error


state 50
	pat : IDENT . COMMA IDENT  (42)

	COMMA  shift 77
	.  error


state 51
	exp : LET LPAREN pat . RPAREN EQUAL exp IN exp  (29)
	pat : pat . COMMA IDENT  (41)

	COMMA  shift 78
	RPAREN  shift 79
	.  error


state 52
	simple_exp : simple_exp DOT . LPAREN exp RPAREN  (7)

	LPAREN  shift 80
	.  error


state 53
	simple_exp : simple_exp . DOT LPAREN exp RPAREN  (7)
	exp : ARRAY_CREATE simple_exp simple_exp .  (32)

	DOT  shift 52
	$end  reduce 32
	BOOL  reduce 32
	INT  reduce 32
	FLOAT  reduce 32
	MINUS  reduce 32
	PLUS  reduce 32
	MINUS_DOT  reduce 32
	PLUS_DOT  reduce 32
	AST_DOT  reduce 32
	SLASH_DOT  reduce 32
	EQUAL  reduce 32
	LESS_GREATER  reduce 32
	LESS_EQUAL  reduce 32
	GREATER_EQUAL  reduce 32
	LESS  reduce 32
	GREATER  reduce 32
	THEN  reduce 32
	ELSE  reduce 32
	IDENT  reduce 32
	IN  reduce 32
	COMMA  reduce 32
	SEMICOLON  reduce 32
	LPAREN  reduce 32
	RPAREN  reduce 32


state 54
	simple_exp : LPAREN exp RPAREN .  (1)

	.  reduce 1

